--- a/color.html
+++ b/color.html
@@ -17,6 +17,7 @@
 	    	<option value="rgb">RGB</option>
 	    	<option value="hsl">HSL</option>
 	    	<option value="hsv">HSV</option>
+	    	<option value="hex">HEX</option>		
 	    	<option value="css">CSS</option>
 	    </select>
 	</div>
@@ -26,6 +27,7 @@
 	    	<option value="rgb">RGB</option>
 	    	<option value="hsl">HSL</option>
 	    	<option value="hsv">HSV</option>
+		<option value="hex">HEX</option>
 	    	<option value="css">CSS</option>
 	    </select>
 	</div>
